<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".cont_emergencia">

    <Button
        android:id="@+id/btnlimpiar2"
        android:layout_width="115dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:background="@color/negro"
        android:text="@string/Limpiar"
        android:textColor="@color/blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtmodelo" />

    <EditText
        android:id="@+id/txttelefono2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edt_style"
        android:ems="10"
        android:hint="@string/Telefono"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtapellido" />

    <EditText
        android:id="@+id/txtparentesco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edt_style"
        android:ems="10"
        android:hint="@string/Parentesco"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttelefono2" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logomotoursinslogan" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edt_style"
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txtapellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edt_style"
        android:ems="10"
        android:hint="@string/Apellido"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/emergencia"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        />

    <Button
        android:id="@+id/btnregistrar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="9"
        android:background="@drawable/btnstilo"
        android:text="@string/Continuar"
        android:textColor="@color/blanco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btnvolver"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_weight="9"
        android:background="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/datos_moto"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtparentesco" />

    <EditText
        android:id="@+id/txtplaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edt_style"
        android:ems="7"
        android:hint="@string/Placa"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/txtcilindraje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/edt_style"
        android:ems="7"
        android:hint="@string/Cilindraje"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/txtplaca"
        app:layout_constraintStart_toEndOf="@+id/txtplaca"
        app:layout_constraintTop_toTopOf="@+id/txtplaca" />

    <EditText
        android:id="@+id/txtmarca"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edt_style"
        android:ems="7"
        android:hint="@string/Marca"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtplaca" />

    <EditText
        android:id="@+id/txtmodelo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/edt_style"
        android:ems="7"
        android:hint="@string/Modelo"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/txtmarca"
        app:layout_constraintStart_toEndOf="@+id/txtmarca"
        app:layout_constraintTop_toTopOf="@+id/txtmarca" />


</androidx.constraintlayout.widget.ConstraintLayout>